[package]
name = "nano33iot_usb"
version = "0.1.0"
authors = ["Gus Wynn <guswynn@gmail.com>"]
description = "Board Support crate for the Arduino Nano 33 IOT"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/arduino_nano33iot/"
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = {version = "0.6.12",optional = true}
arduino_nano33iot={path = "../../crates/atsamd/boards/arduino_nano33iot",version = "~0.3",features = ["rt", "unproven", "usb"]}
atsamd-hal = {path = "../../crates/atsamd/hal",version = "0.11",default-features = false, features = ["usb"]}

panic-halt = {version = "~0.2", optional = true}
embedded-hal = "0.2.3"
nb = "0.1"

usb-device={version = "0.2",optional = true}
usbd-serial = {version = "0.1",optional = true}

arrayvec = {version = "0.5.1", default-features = false}

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "panic_halt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
panic_halt = ["panic-halt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []


[profile.release]
debug = true
lto = "fat"
opt-level = 's'